# ChatSuite

./: .gitignore  .package.resolved 01.19.38  README.md
.github/workflows/: ios-build.yml
ChatClient/: .package.resolved  Makefile  Workspace.swift
ChatClient/.github/workflows/: ios-build.yml
ChatClient/API/API/: Project.swift
ChatClient/API/CryptoAPI/: Project.swift
ChatClient/Applications/ChatClient/: Project.swift
ChatClient/ChatClient/: ChatClientApp.swift  ChatView.swift  ContentView.swift  EmailLogin.swift  LoginView.swift  MainView.swift  SearchUser.swift  SignInView.swift
ChatClient/ChatClient/Application/: ChatClientApp.swift
ChatClient/ChatClient/Errors/: CryptoKeyManagerError.swift  NetworkError.swift
ChatClient/ChatClient/Features/: MainView.swift  SearchMateView.swift
ChatClient/ChatClient/KeyChain/: CryptoKeyManager.swift
ChatClient/ChatClient/Managers/: CryptoManager.swift  GoogleSignInManager.swift  LoggedUserManager.swift  NetworkManager.swift  WebSocketManager.swift
ChatClient/ChatClient/Models/: ChatMessage.swift  (+6 more)
ChatClient/Core/: Project.swift
ChatClient/Tuist/: Package.resolved  Package.swift
ChatClient/scripts/: cli_generator.sh  needle_generation.sh  needle_validation_script.sh  target_generator.sh
ChatServer/: Dockerfile  Makefile  Package.resolved  Package.swift  docker-compose.yml  setup.sh
Documentation/: CI.md  Crypto.md  DI.md  Scripts.md  ServerSide.md  Tuist.md
EmailSenderService/: Cargo.toml
EmailSenderService/src/: email_processor.rs  email_req.rs  main.rs
Fastlane/: Fastfile  README.md
(+156 files in other folders)
