[package]
name = "EmailSenderService"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
async-trait = "0.1"
async-smtp = "0.10.2"
lettre = "0.11.19"
lettre_email = "0.9.4"